sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:4: error: not found: value n
  n=getValueCount()
  ^AlgGnomeSort:6: error: not found: value n
  for(it<-1 to n-1){
               ^