sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  
  n=getValueCount()
  
  for(it<-1 to n-1){
    var element : Int = it-1
    while(isSmaller(it,element)){
      swap(it,element)
      element-=1
    }
  }
}